# moirai_sklearn

./: .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  __init__.py  forecaster.py  pyproject.toml  pytest.ini  setup_guide.md  test.ipynb
.github/workflows/: test.yml
_vendor/: __init__.py  attention.py  ffn.py  imputation.py  moirai2_forecast.py  moirai2_module.py  norm.py  packed_scaler.py  position.py  torch_util.py  transformer.py  ts_embed.py
examples/: basic_usage.py
tests/: __init__.py
